--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/title_activity_heartbeat_status"
-            android:theme="@style/Theme.Heartbeat">
+            android:theme="@style/Theme.Heartbeat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
